...
              const SizedBox(height: 30),
              SizedBox(
                width: double.infinity,
                height: 50,
                child: FilledButton(
                  onPressed: _isLoading ? null : _updateProfile,
                  child: _isLoading ? const SizedBox(height: 20, width: 20, child: CircularProgressIndicator(color: Colors.white, strokeWidth: 2)) : const Text("Save Profile Changes"),
                ),
              ),
              const SizedBox(height: 30),
              const Divider(),
              const SizedBox(height: 10),
              ListTile(
...
                title: const Text("Change Password"),
                trailing: const Icon(Icons.chevron_right),
                onTap: _showChangePasswordDialog,
              ),
              ListTile(
                leading: const Icon(Icons.logout, color: Colors.grey),
                title: const Text("Log Out"),
                onTap: _logout,
              ),

              // --- NEW DELETE ACCOUNT BUTTON ---
              ListTile(
                leading: const Icon(Icons.delete_forever_rounded, color: Colors.red),
...
